crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-view_union_all_join-multi_embeddings_megascience_vector_search_sql_filters.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Arrow error: Invalid argument error: column types must match schema types, expected FixedSizeList(256 x Float32) but found FixedSizeList(256 x Float32, field: '') at column index 2"
